# FiberSim

./: .gitignore  5ph.mac  CMakeLists.txt  README.md  pathcheck2.txt  pathcheck4.txt  photon.mac  run.mac  run1.mac  test.mac  test1.txt
ROOT/: gamma_test2.root  nullTest.root  output.root  output_geantino.root  ph_5.root  ph_test1.root  ph_test2.root
ROOT/testFiles/: gamma_test.root  gamma_test1.root  ph_1.root  ph_1000BAD.root  ph_2.root
analysis/: countpaths.cpp  distances.cpp  multi_lengths.cpp  path.cpp  pathcuts.cpp  pathstats.cpp  test.cpp
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Materials.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
old/: old_step.txt
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Materials.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
